# cpprequests

./: CMakeLists.txt  README.md
cmake/: build_curl.cmake  nlohmann_json.cmake
include/: DataStream.h  JSONSerializable.h  Requests.h  stringutil.h
src/: CMakeLists.txt  DataStream.cpp  JSONSerializable.cpp  Requests.cpp  fuckaroundandfindout.cpp  test_executable.cpp
